# CMake-Tutorial

./: .gitignore
Step1/: .gitignore  CMakeLists.txt  tutorial.cxx
Step2/: CMakeLists.txt  tutorial.cxx
Step2/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
Step2_build/: CMakeCache.txt  Makefile  Tutorial  cmake_install.cmake
Step2_build/MathFunctions/: Makefile  cmake_install.cmake
Step3_build/: CMakeCache.txt  Makefile  Tutorial  cmake_install.cmake
Step3_build/MathFunctions/: Makefile  cmake_install.cmake
